# libtmj

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  todo.txt
.github/workflows/: build_ship.yml  cmake.yml
cmake/: FindJansson.cmake  FindZstd.cmake
example/: overworld.tmj  overworld.tsj  overworld_inf.tmj  testmap.tmj
include/: map.h  tmj.h
src/: decode.c  decode.h  log.c  log.h  map.c  map.h  tileset.c  tileset.h  tmj.def  tmj.sym  util.c
test/: decode_tests.c  infinite_map_tests.c  map_tests.c  tests.c  tileset_tests.c  util_tests.c
